scribble-assertions/src/test/resources/good/extensions/assertions/ComplexMessageFlowb.scr
module good.extensions.assertions.ComplexMessageFlowb;


type <java> "java.lang.Integer" from "rt.jar" as Integer;
type <java> "java.lang.Long" from "rt.jar" as Long;


// assrt-core version of good.extensions.assertions.ComplexMessageFlow;
global protocol Proto1(role A, role B, role C, role D)
{	
	MSG1(x:Integer) from A to B;  @(x > 10);
	MSG1(y:Integer) from A to B; 
	
	MSG1(xa: Integer) from B to C;  @(xa = x);
	MSG1(ya:Integer) from B to C;  @(ya = y);
	
	MSG1(z:Integer) from C to D;  @(z < xa);
}
