scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest14.scr
module bad.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest14;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto2(role A, role B) @"(x:=3)"  // Assrt-prog error and unsat if validated as root
{
	2() from B to A; @"(x=4)"
}
//*/
